# app/internal/dto/response.go
@@ -14,3 +14,14 @@ type MessagePreview struct {
 	Subject string `json:"subject"`
 	Body    string `json:"body"`
 }
+
+type AddMessageResponse struct {
+	Message *Message `json:"message"`
+	Task    *Task    `json:"task"`
+}
+
+type AddBatchMessageResponse struct {
+	Message *Message `json:"message"`
+	Task    *Task    `json:"task"`
+	Err     error    `json:"error"`
+}
